# RepoAI_AI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruffignore  AI_SERVICE_TODO.md  Dockerfile  README.md  WORKSPACE_STRUCTURE.md  chat_orchestrator.py  cloudbuild.yaml  entrypoint.sh  model.py  mypy.ini  pyproject.toml
.azure/: phase_4c_real_compilation.md
.github/workflows/: ci.yaml
docs/: BACKEND_INTEGRATION_SSE.md  BUILD_SYSTEM_POLICY.md  MODULE_REFERENCE.md  README.md  build_streaming_implementation_summary.md  conversational_api_configuration.md  conversational_intent_detection.md  demo_configuration.md  file_content_streaming.md  java_backend_integration.md  llm_confirmations_summary.md  phase3_repository_cloning.md  phase_4c_real_compilation.md  phase_5.md  push_confirmation_llm.md  streaming_build_output.md  streaming_configuration_summary.md  streaming_implementation.md  streaming_vs_batch.md  testing.md  transformer_improvements.md
notebooks/: 00_quickstart.ipynb  intake_agent.ipynb  model_tests.ipynb  pydanti_ai.ipynb  test_pydantic_ai_adapter.ipynb
repoai-ai/: .gitignore  Dockerfile  LICENSE  WORKSPACE_STRUCTURE.md  cloudbuild.yaml  entrypoint.sh  pyproject.toml
repoai-ai/docs/: POSTMAN_TESTING_GUIDE.md  README.md  frontend_diff_rendering.md
repoai-ai/scripts/: README.md  start_server.sh  test_conversational_api.sh
repoai-ai/tests/: test_git_utils.py  test_java_build_utils.py  test_targeted_fixes.py
repoai-ai/usage_examples/: livetest_java_parser.py  test_java_parser.py
repoai-backend/: .dockerignore  .env  BACKEND_IMPLEMENTATION_GUIDE.md  Dockerfile  cloudbuild.yaml  pom.xml
repoai-frontend/: .env.local  Dockerfile  README.md  cloudbuild.yaml  nginx.conf  package-lock.json  package.json
repoai-frontend/src/: App.jsx
scripts/: run_api_tests.sh  run_refactor_job.py  validate_for_demo.sh
src/repoai/: cli.py
src/repoai_ai/: __init__.py
tests/: README.md  debug_maven_compilation.py  debug_maven_output.py  manual_test_maven.py  smoke_orchestrator_validation_stream.py  smoke_transformer_batch_test.py  smoke_transformer_fix_test.py  test_build_output_streaming.py  test_circular_import_fix.py  test_file_operations.py  test_planner_agent.py  test_targeted_fixes.py
tests/api/: test_endpoints.py  test_sse_streaming.py  test_with_real_repo.py
tests/integration/: __init__.py  (+1 more)
usage_examples/: intake2planner.py  livetest_java_parser.py  test_java_parser.py  transformer_workflow.py  validator_workflow.py
(+143 files in other folders)
