[project]
name = "repoai-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Timmythaw", email = "timmythaw17@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
    "typer>=0.19.2",
]

[project.scripts]
repoai-ai = "repoai_ai:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
