[project]
name = "repoai-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Timmythaw", email = "timmythaw17@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.1.0",
    "rich>=14.2.0",
    "typer>=0.19.2",
]

[project.scripts]
repoai-ai = "repoai_ai:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black==24.10.0",
    "ipykernel>=7.0.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff==0.6.9",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","UP","B"]
lint.ignore = ["E501", "E402"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
